--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ee<!DOCTYPE html>
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
@@ -115,7 +115,7 @@
                     <span>mySQL</span>
                 </div>
     
-                <h3>Frameworks</h3>
+                <h3>Frameworks et autres technologies</h3>
                 <div class="skill">
                     <i class="fas fa-code"></i>
                     <span>JakartaEE</span>
